# sdk-internal

./: .editorconfig  .gitignore  .oxfmtrc.json  .prettierignore  .somechange  ATTACK_PLANS.md  CLAUDE.md  CODEBASE_OVERVIEW.md  Cargo.toml  DISCLAIMER.md  LICENSE  README.md  architecture.toml  bacon.toml  clippy.toml  flake.nix  lint-staged.config.js  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tree.txt
bitwarden_license/bit-bitwarden-wasm-internal/: Cargo.toml  build.sh
bitwarden_license/bit-bitwarden-wasm-internal/npm/: .gitignore  index.js  package-lock.json  package.json
bitwarden_license/bit-bitwarden-wasm-internal/src/: client.rs  custom_types.rs  lib.rs
bitwarden_license/bitwarden-commercial-marker/: Cargo.toml
bitwarden_license/bitwarden-commercial-marker/src/: lib.rs
bitwarden_license/bitwarden-commercial-vault/: Cargo.toml  README.md  uniffi.toml
bitwarden_license/bitwarden-commercial-vault/src/: lib.rs  vault_client.rs
bitwarden_license/bitwarden-pam/: Cargo.toml  README.md
bitwarden_license/bitwarden-pam/src/: lib.rs  pam_client.rs
bitwarden_license/bitwarden-rotation-daemon/: Cargo.toml  README.md  dev-config.toml
bitwarden_license/bitwarden-rotation-daemon/examples/: register.rs
bitwarden_license/bitwarden-rotation-daemon/src/: cli.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  policy.rs  token.rs
bitwarden_license/bitwarden-rotation-daemon/tests/: daemon_flow.rs
crates/async-compat/: Cargo.toml
crates/async-compat/src/: lib.rs
crates/bitwarden-api-api/: Cargo.toml  README.md
crates/bitwarden-api-api/.openapi-generator/: FILES
crates/bitwarden-api-api/src/: lib.rs  uniffi_support.rs
crates/bitwarden-api-base/: Cargo.toml  README.md  uniffi.toml
crates/bitwarden-api-base/src/: client.rs  configuration.rs  error.rs  lib.rs  request.rs  status_code_serializer.rs  uniffi_support.rs  util.rs
crates/bitwarden-api-identity/: .openapi-generator-ignore  Cargo.toml  README.md
crates/bitwarden-api-identity/.openapi-generator/: FILES
crates/bitwarden-api-identity/src/: lib.rs
crates/bitwarden-api-key-connector/: Cargo.toml  README.md
crates/bitwarden-api-key-connector/src/: lib.rs
crates/bitwarden-auth/: Cargo.toml  README.md  uniffi.toml
crates/bitwarden-auth/src/: auth_client.rs  lib.rs  registration.rs  user_registration.rs
crates/bitwarden-auth/tests/: registration_open_org_invite.rs  send_access.rs
crates/bitwarden-client-manager/: Cargo.toml
crates/bitwarden-client-manager/src/: backend.rs  client_manager.rs  lib.rs  sdk_managed.rs
crates/bitwarden-collections/: Cargo.toml  README.md  uniffi.toml
crates/bitwarden-collections/src/: collection.rs  error.rs  lib.rs  tree.rs
crates/bitwarden-common/: Cargo.toml
crates/bitwarden-common/src/: encoding.rs
crates/bitwarden-core/: Cargo.toml  README.md  uniffi.toml
crates/bitwarden-core-macro/: Cargo.toml
crates/bitwarden-core-macro/src/: client_trait.rs  from_client.rs  lib.rs
crates/bitwarden-core/src/: error.rs  ids.rs  lib.rs  types.rs  uniffi_support.rs
crates/bitwarden-core/tests/: client_trait_smoke.rs  from_client_shared.rs  http_middleware_integration.rs  register.rs
crates/bitwarden-crypto/: Cargo.toml  README.md  uniffi.toml
crates/bitwarden-crypto-cipher-suite/: Cargo.toml  README.md
crates/bitwarden-crypto-cipher-suite/src/: cipher_suite_client.rs  lib.rs
crates/bitwarden-crypto/benches/: chunked_aead_stream.rs  ciphers.rs  default_allocator.rs
crates/bitwarden-crypto/examples/: organization_v2_protocol.rs  protect_key_with_key.rs  protect_key_with_password.rs  protect_key_with_secret.rs  seal_struct.rs  signature.rs  signed_object.rs  streaming_attachment.rs
crates/bitwarden-crypto/src/: aes.rs  aes_gcm.rs  blake3.rs  chacha20.rs  content_format.rs  cose.rs  ed25519.rs  ensure.rs  error.rs  fingerprint.rs  kdf.rs  lib.rs  opaque_ke.rs  rotateable_keyset.rs  rsa.rs  secure_channel.rs  security_state.rs  sign.rs  streaming_attachment_cipher.rs  uniffi_support.rs  util.rs  wordlist.rs  x25519.rs  x25519_kem.rs  xchacha20.rs  xwing.rs
crates/bitwarden-encoding/: Cargo.toml  README.md  uniffi.toml
crates/bitwarden-encoding/src/: b64.rs  b64url.rs  chunked.rs  lib.rs  uniffi_support.rs
crates/bitwarden-encoding/tests/: wasm_b64.rs
crates/bitwarden-error/: Cargo.toml  README.md
crates/bitwarden-error-macro/: CLAUDE.md  Cargo.toml
crates/bitwarden-error-macro/src/: args.rs  attribute.rs  lib.rs  wasm_ipc.rs
crates/bitwarden-error-macro/tests/: mod.rs
crates/bitwarden-error/src/: flat_error.rs  lib.rs  metadata.rs  variant.rs  wasm.rs
crates/bitwarden-error/tests/: basic.rs  flat.rs  full.rs  mod.rs
crates/bitwarden-exporters/: CLAUDE.md  Cargo.toml  README.md  uniffi.toml
crates/bitwarden-exporters/resources/: 1p_export.json  cxf_example.json  dashlane_export.json
crates/bitwarden-exporters/src/: client_exporter.rs  csv.rs  cxp.rs  encrypted_json.rs  error.rs  export.rs  exporter_client.rs  json.rs  kdbx.rs  lib.rs  models.rs
crates/bitwarden-ffi/: Cargo.toml
crates/bitwarden-ffi/src/: lib.rs
crates/bitwarden-ffi/tests/: mod.rs  wasm_export.rs
crates/bitwarden-fido/: Cargo.toml  README.md  uniffi.toml
crates/bitwarden-fido/src/: authenticator.rs  client.rs  client_fido.rs  crypto.rs  device_auth_key.rs  lib.rs  traits.rs  types.rs  uniffi_support.rs  wasm.rs
crates/bitwarden-flight-recorder/: Cargo.toml
crates/bitwarden-flight-recorder/benches/: flight_recorder_performance.rs
crates/bitwarden-flight-recorder/src/: circular_buffer.rs  config.rs  error.rs  event.rs  layer.rs  lib.rs
crates/bitwarden-flight-recorder/tests/: flight_recorder_performance.rs
crates/bitwarden-importers/: CLAUDE.md  Cargo.toml  README.md
crates/bitwarden-importers/src/: error.rs  import.rs  lib.rs  (+2 more)
crates/bitwarden-ipc/: CLAUDE.md  Cargo.toml  README.md
crates/bitwarden-iter/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: generate_mac.rs  parse_cxf.rs  parse_enc_buffer.rs  parse_enc_string.rs  parse_passkey.rs  parse_symmetric_crypto_key.rs  parse_unsigned_shared_key.rs
(+2263 files in other folders)
