[package]
name = "bitwarden-api-api"
description = "Api bindings for the Bitwarden API."
categories = ["api-bindings"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
default = []
wasm = ["dep:tsify", "dep:wasm-bindgen"] # WASM support

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_with = { version = ">=3.8, <4", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
tsify = { workspace = true, optional = true, features = ["js"], default-features = false }
url = ">=2.5, <3"
uuid = { workspace = true }
wasm-bindgen = { workspace = true, optional = true, features = ["serde-serialize"] }
