[package]
name = "bitwarden-api-base"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
uniffi = ["dep:bitwarden-uniffi-error", "dep:uniffi"] # Uniffi bindings

[dependencies]
bitwarden-uniffi-error = { workspace = true, optional = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uniffi = { workspace = true, optional = true }
url = ">=2.5, <3"

[lints]
workspace = true
