[package]
name = "bitwarden-api-identity"
categories = ["api-bindings"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
uniffi = ["dep:uniffi"] # Uniffi bindings

[dependencies]
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "http2"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
uniffi = { workspace = true, optional = true }
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
