[package]
name = "bitwarden-auth"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
wasm = [
    "bitwarden-core/wasm",
    "dep:tsify",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures"
] # WASM support
uniffi = [
    "bitwarden-core/uniffi",
    "dep:uniffi"
] # Uniffi bindings

# Note: dependencies must be alphabetized to pass the cargo sort check in the CI pipeline.
[dependencies]
bitwarden-core = { workspace = true, features = ["internal"] }
bitwarden-error = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[dev-dependencies]
bitwarden-test = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
wiremock = "0.6.0"

[lints]
workspace = true
