[package]
name = "bitwarden-client-manager"
description = """
Internal crate for the bitwarden crate. Do not use.
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
wasm = [
    "dep:tsify",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "bitwarden-core/wasm",
    "bitwarden-threading/wasm",
] # WASM support

[dependencies]
async-trait = { workspace = true }
bitwarden-core = { workspace = true }
bitwarden-threading = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
js-sys = { workspace = true, optional = true }
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[dev-dependencies]

[lints]
workspace = true
