[package]
name = "bitwarden-core"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[package.metadata.cargo-udeps.ignore]
normal = [
    "getrandom2",
    "getrandom3",
    "getrandom4",
] # Only used to enable WASM support, not used directly

[features]
internal = ["dep:zxcvbn"]
no-memory-hardening = [
    "bitwarden-crypto/no-memory-hardening",
] # Disable memory hardening features
secrets = [] # Secrets manager API
uniffi = [
    "internal",
    "bitwarden-crypto/uniffi",
    "bitwarden-encoding/uniffi",
    "dep:bitwarden-uniffi-error",
    "dep:uniffi",
] # Uniffi bindings
wasm = [
    "bitwarden-crypto/wasm",
    "bitwarden-encoding/wasm",
    "bitwarden-error/wasm",
    "bitwarden-state/wasm",
    "bitwarden-threading/wasm",
    "getrandom2/js",
    "getrandom3/wasm_js",
    "getrandom4/wasm_js",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:tsify",
] # WASM support
# WARNING: This feature is for debugging purposes only and should never be enabled in production.
# It disables compile-time debug prevention for cryptographic keys, exposing sensitive key material
# in debug output, and adds tracing debug logs to encrypt/decrypt operations.
dangerous-crypto-debug = ["bitwarden-crypto/dangerous-crypto-debug"]
test-fixtures = ["bitwarden-test"]

[dependencies]
async-trait = { workspace = true }
bitwarden-api-api = { workspace = true }
bitwarden-api-base = { workspace = true }
bitwarden-api-identity = { workspace = true }
bitwarden-api-key-connector = { workspace = true }
bitwarden-core-macro = { workspace = true }
bitwarden-crypto = { workspace = true }
bitwarden-encoding = { workspace = true }
bitwarden-error = { workspace = true }
bitwarden-state = { workspace = true }
bitwarden-test = { workspace = true, optional = true }
bitwarden-threading = { workspace = true }
bitwarden-uniffi-error = { workspace = true, optional = true }
bitwarden-uuid = { workspace = true }
chrono = { workspace = true, features = ["std"] }
# We don't use these directly (they're used by rand), but we need them here to enable WASM support
# Unfortunately we have a lof of dependencies that use different versions of getrandom, so we
# need to enable WASM support for all of them.
getrandom2 = { package = "getrandom", version = "0.2", optional = true }
getrandom3 = { package = "getrandom", version = "0.3", optional = true }
getrandom4 = { package = "getrandom", version = "0.4", optional = true }
http = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true, features = ["tokio"] }
uuid = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
zeroize = { workspace = true, features = ["derive", "aarch64"] }
zxcvbn = { workspace = true, optional = true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
# By default, we use rustls as the TLS stack and rust-platform-verifier to support user-installed root certificates
# The only exception is WASM, as it just uses the browsers/node fetch
reqwest = { workspace = true, features = ["rustls-tls-manual-roots"] }
rustls = { version = "0.23.19", default-features = false }
rustls-platform-verifier = "0.6.0"

[dev-dependencies]
rand_chacha = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
wiremock = { workspace = true }
zeroize = { workspace = true, features = ["derive", "aarch64"] }

[lints]
workspace = true
