[package]
name = "bitwarden-crypto-cipher-suite"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
default = []
uniffi = ["bitwarden-core/uniffi", "bitwarden-crypto/uniffi", "dep:uniffi"]
wasm = [
    "bitwarden-core/wasm",
    "bitwarden-crypto/wasm",
    "dep:tsify",
    "dep:wasm-bindgen",
]

[dependencies]
bitwarden-core = { workspace = true }
bitwarden-crypto = { workspace = true }
tsify = { workspace = true, optional = true }
uniffi = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[lints]
workspace = true
