[package]
name = "bitwarden-crypto"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
default = []
no-memory-hardening = [] # Disable memory hardening features
uniffi = [
    "bitwarden-encoding/uniffi",
    "dep:bitwarden-uniffi-error",
    "dep:uniffi"
] # Uniffi bindings
wasm = ["dep:tsify", "dep:wasm-bindgen"] # WASM support

[dependencies]
aes = { version = ">=0.8.2, <0.9", features = ["zeroize"] }
argon2 = { version = ">=0.5.0, <0.6", features = [
    "std",
    "zeroize",
], default-features = false }
bitwarden-encoding = { workspace = true }
bitwarden-error = { workspace = true }
bitwarden-uniffi-error = { workspace = true, optional = true }
cbc = { version = ">=0.1.2, <0.2", features = ["alloc", "zeroize"] }
chacha20poly1305 = { version = "0.11.0-rc.1" }
ciborium = { version = ">=0.2.2, <0.3" }
coset = { version = "=0.4.0" }
digest = { version = "=0.11.0-rc.3" }
ed25519-dalek = { version = "=3.0.0-pre.1", features = ["rand_core"] }
generic-array = { version = ">=0.14.7, <1.0", features = ["zeroize"] }
hkdf = "=0.13.0-rc.2"
hmac = "=0.13.0-rc.2"
ml-dsa = "0.0.4"
num-bigint = ">=0.4, <0.5"
num-traits = ">=0.2.15, <0.3"
pbkdf2 = { version = "=0.13.0-rc.1", default-features = false }
rand = "0.9.2"
rand_chacha = "=0.9.0"
rand_core = { version = "0.9.3", features = ["os_rng"] }
rayon = ">=1.8.1, <2.0"
rsa = "=0.10.0-rc.9"
schemars = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_repr.workspace = true
sha1 = "=0.11.0-rc.2"
sha2 = "=0.11.0-rc.2"
subtle = ">=2.5.0, <3.0"
thiserror = { workspace = true }
tsify = { workspace = true, optional = true }
typenum = ">=1.18.0, <1.19.0"
uniffi = { workspace = true, optional = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
zeroize = { version = ">=1.7.0, <2.0", features = ["derive", "aarch64"] }
zeroizing-alloc = ">=0.1.0, <0.2"

[dev-dependencies]
criterion = "0.6.0"
rand_chacha = "0.3.1"
serde_json = { workspace = true }

[[bench]]
name = "default_allocator"
harness = false
required-features = ["no-memory-hardening"]

[[bench]]
name = "zeroizing_allocator"
harness = false
required-features = ["no-memory-hardening"]

[lints]
workspace = true
